--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             <ul>
                 <li><a href="#" class="menu">Home</a></li>
                 <li><a href="#" class="menu">Notícias</a></li>
-                <li><a href="#" class="menu">Curiosidades</a></li>
-                <li><a href="#" class="menu">Fale Conosco</a></li>
+                <li><a href="#" class="menu">Contato</a></li>
             </ul>
         </nav>
     <main>
